chore: replacing karma and jasmine by jest and testing library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
