--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --coverage --config ./jest.config.ts",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -27,20 +28,23 @@
     "@angular-eslint/eslint-plugin": "^18.0.1",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
-    "@types/jasmine": "~5.1.0",
+    "@testing-library/angular": "^16.0.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.13",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-testing-library": "^6.2.2",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^14.1.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.2"
   }
 }
