--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest --coverage --config ./jest.config.ts",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prettier": "npx prettier --write .",
+    "eslint": "npx eslint --ext .ts",
+    "commitlint": "npx commitlint --edit"
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm rum err && npm run prettier && npm run eslint && npm run commitlint"
+    }
+  },
   "dependencies": {
     "@angular/animations": "^18.0.0",
     "@angular/common": "^18.0.0",
@@ -28,6 +36,9 @@
     "@angular-eslint/eslint-plugin": "^18.0.1",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/format": "^19.3.0",
     "@testing-library/angular": "^16.0.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/user-event": "^14.5.2",
@@ -39,6 +50,7 @@
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-testing-library": "^6.2.2",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
