--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "npm rum err && npm run prettier && npm run eslint && npm run commitlint"
+      "pre-commit": "npm rum e && npm run prettier && npm run eslint && npm run commitlint"
     }
   },
   "dependencies": {
