--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test:watch": "jest --watch",
     "prettier": "npx prettier --write .",
     "eslint": "npx eslint --ext .ts",
-    "commitlint": "npx commitlint --edit"
+    "commitlint": "npx commitlint --edit",
+    "prepare": "husky"
   },
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "npm rum e && npm run prettier && npm run eslint && npm run commitlint"
+      "pre-commit": "npm rum er && npm run prettier && npm run eslint && npm run commitlint"
     }
   },
   "dependencies": {
