--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,17 +3,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jest",
-      "node"
-    ]
+    "types": ["jest", "node"]
   },
   "files": [
     "testing/setups/jest-angular.setup.ts",
-    "testing/setups/jest-dom.setup.ts",
+    "testing/setups/jest-dom.setup.ts"
   ],
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
