--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prettier": "npx prettier --write .",
     "eslint": "npx eslint --ext .ts",
     "commitlint": "npx commitlint --edit",
-    "pre-push": "npm run prettier && npm run eslint && npm run commitlint",
+    "pre-commit": "npm run prettier && npm run eslint",
+    "pre-push": "npm run commitlint",
     "prepare": "husky"
   },
   "private": true,
