--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "build": "ng build",
     "test": "jest --coverage --config ./jest.config.ts",
     "commitlint": "npx commitlint -e",
-    "prettier": "npx prettier --write .",
     "eslint": "npx eslint --ext .ts,.html --max-warnings=0",
-    "prepare": "husky"
+    "prettier": "npx prettier --write ."
   },
   "private": true,
   "dependencies": {
@@ -43,10 +42,10 @@
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-testing-library": "^6.2.2",
-    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
+    "lefthook": "^1.6.14",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
