test: hook test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,11 @@
   ],
   "parser": "@typescript-eslint/parser",
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error",
     "no-use-before-define": "off",
     "import/extensions": [
-      "warn",
+      "error",
       "ignorePackages",
       {
         "ts": "never"
@@ -23,12 +23,12 @@
     "import/prefer-default-export": "off",
     "no-shadow": "off",
     "@typescript-eslint/explicit-function-return-type": [
-      "warn",
+      "error",
       {
         "allowExpressions": true
       }
     ],
     "max-len": ["off", { "code": 100 }],
-    "testing-library/no-unnecessary-act": "warn"
+    "testing-library/no-unnecessary-act": "error"
   }
 }
