--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,7 @@
   "trailingComma": "es5",
   "semi": false,
   "singleQuote": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "singleAttributePerLine": true
 }
