--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "ng build",
     "test": "jest --coverage --config ./jest.config.ts",
     "commitlint": "npx commitlint -e",
-    "eslint": "npx eslint --ext .ts,.html --max-warnings=0",
+    "eslint": "npx eslint . --max-warnings=0",
     "prettier": "npx prettier --write ."
   },
   "private": true,
@@ -38,7 +38,9 @@
     "@types/node": "^20.12.13",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "eslint": "^8.57.0",
+    "eslint-config-angular": "^0.5.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-testing-library": "^6.2.2",
