--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,6 @@
             "outputPath": "dist/sky-sentry",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -29,7 +28,23 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/styles"]
+            },
+            "styles": [
+              "node_modules/primeng/resources/primeng.min.css",
+              {
+                "input": "node_modules/primeng/resources/themes/lara-light-purple/theme.css",
+                "bundleName": "light-theme",
+                "inject": false
+              },
+              {
+                "input": "node_modules/primeng/resources/themes/lara-dark-purple/theme.css",
+                "bundleName": "dark-theme",
+                "inject": false
+              },
+              "src/styles/global.scss"
+            ],
             "scripts": []
           },
           "configurations": {
