--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
             },
             "styles": [
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
               {
                 "input": "node_modules/primeng/resources/themes/lara-light-purple/theme.css",
                 "bundleName": "light-theme",
